- Metainfo fix